feat: add Community page with multilingual support
- Create Community page component with hero, updates, supporters, associations, shorts, and quick links sections
- Add community translations to all 13 locales (en, ko, zh, ja, vi, mn, ar, hi, es, fr, de, ru, th)
- Update Header navigation to link /community route
- Add /community route in App.tsx
- Fix JSON syntax errors in locale files (trailing commas, missing commas)
- Align mega menu association link to /community/associations

--- a/src/i18n/locales/ar.json
+++ b/src/i18n/locales/ar.json
@@ -42,9 +42,64 @@
   },
   "hero": {
     "title": "الدراسة في الولايات المتحدة",
-    "subtitle": "ابدأ رحلتك نحو التعليم العالمي",
-    "description": "هل أنت مهتم بالدراسة في الولايات المتحدة؟ اكتشف كل ما تحتاج معرفته حول الدراسة في أمريكا.",
-    "cta": "استكشف الآن"
+    "subtitle": "ابدأ رحلتك نحو التعليم العالمي"
+  },
+  "community": {
+      "hero": {
+        "badge": "مركز المجتمع",
+        "title": "ابق على اتصال مع مجتمع الدراسة بالخارج",
+        "subtitle": "أخبار وقصص وموارد مختارة للطلاب الدوليين",
+        "description": "استكشف فيديوهات الداعمين، جمعيات الطلاب، المنح الدراسية، وروابط سريعة مستوحاة من مجتمع الدراسة في كوريا."
+      },
+      "sections": {
+        "updates": "أحدث المستجدات",
+        "updatesDesc": "تابع الأخبار، أنشطة الداعمين، المنح الدراسية، وأسئلة المجتمع الشائعة.",
+        "supporters": "الداعمون",
+        "supportersDesc": "استمع مباشرةً لآراء الداعمين حول الدراسة والحياة في الخارج.",
+        "associations": "جمعيات الطلاب",
+        "associationsDesc": "تواصل مع جمعيات طلابية إقليمية واحصل على دعم محلي.",
+        "shorts": "قصص قصيرة",
+        "shortsDesc": "مقاطع قصيرة تسلط الضوء على تجربة الدراسة بالخارج.",
+        "quick": "روابط سريعة"
+      },
+      "updates": {
+        "notice": { "title": "إشعارات وأخبار", "desc": "إعلانات ومواعيد نهائية مهمة للطلاب." },
+        "stories": { "title": "قصص الدراسة", "desc": "تجارب واقعية من طلاب يدرسون في الخارج." },
+        "supporters": { "title": "أنشطة الداعمين", "desc": "تابع أحدث الفعاليات والمحتوى من داعمينا." },
+        "gks": { "title": "أبرز المنح", "desc": "اطلع على منح على نمط GKS وتحديثات المساعدات المالية." },
+        "associations": { "title": "جمعيات الطلاب", "desc": "اعثر على جمعيات طلابية إقليمية للانضمام إليها." },
+        "faq": { "title": "الاستفسارات والأسئلة الشائعة", "desc": "إجابات عن الأسئلة المتكررة حول الدراسة بالخارج." },
+        "resources": { "title": "موارد مفيدة", "desc": "أدلة وقوائم وأدوات للتخطيط لرحلتك." }
+      },
+      "supporters": {
+        "items": {
+          "1": { "title": "داعمون من جامعة نورث إيسترن (مشروع ختامي بمول ولاية نيويورك)", "author": "مرفوع بواسطة Study in Korea", "meta": "مقابلة فيديو، حياة الطلاب" },
+          "2": { "title": "داعمون من حرم آسيا بجامعة يوتا", "author": "مرفوع بواسطة Study in Korea", "meta": "جولة في الحرم، برامج" },
+          "3": { "title": "الحياة في جامعة دوكسونغ للنساء (Mink in Korea)", "author": "مرفوع بواسطة Mink in Korea", "meta": "فلوغ، حياة الحرم" }
+        }
+      },
+      "associations": {
+        "items": {
+          "1": { "title": "DECOK (جمعية طلاب جمهورية الكونغو الديمقراطية)", "country": "جمهورية الكونغو الديمقراطية", "meta": "شبكات، إرشاد، ودعم الأقران" },
+          "2": { "title": "FPVSAK (اتحاد خريجي بيرو في كوريا)", "country": "بيرو", "meta": "فعاليات مجتمعية وتبادل ثقافي" },
+          "3": { "title": "KSAK (جمعية طلاب كازاخستان في كوريا)", "country": "كازاخستان", "meta": "إرشاد محلي ودعم للمنضمين الجدد" }
+        }
+      },
+      "shorts": {
+        "items": {
+          "1": { "title": "أبرز فعاليات معرض التوظيف للطلاب الدوليين" },
+          "2": { "title": "قصص الإرشاد المهني" },
+          "3": { "title": "ملخص معرض المواهب العالمية" }
+        }
+      },
+      "quick": {
+        "findSupporters": "اعثر على داعمي Go Almond",
+        "findSchool": "ابحث عن الجامعات والتخصصات",
+        "scholarships": "استكشف المنح الدراسية",
+        "onlineApplication": "تقديم طلب عبر الإنترنت",
+        "guidebook": "حمّل دليل الدراسة"
+      },
+      "cta": { "viewAll": "عرض الكل" }
   },
   "search": {
     "title": "هل أنت مهتم بالدراسة في الولايات المتحدة؟",
@@ -112,10 +167,6 @@
     "visaInfo": "معلومات التأشيرة",
     "studyFair": "معرض الدراسة في الولايات المتحدة",
     "studentAssoc": "جمعية الطلاب الدوليين"
-  },
-  "community": {
-    "title": "مجتمع الطلاب الدوليين",
-    "subtitle": "جمعيات الطلاب حسب البلد"
   },
   "footer": {
     "about": "نبذة عنا",
