--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -42,9 +42,64 @@
   },
   "hero": {
     "title": "अमेरिका में पढ़ाई करें",
-    "subtitle": "वैश्विक शिक्षा की ओर अपनी यात्रा शुरू करें",
-    "description": "क्या आप अमेरिका में पढ़ाई में रुचि रखते हैं? अमेरिका में अध्ययन के बारे में सब कुछ जानें।",
-    "cta": "अभी खोजें"
+    "subtitle": "वैश्विक शिक्षा की ओर अपनी यात्रा शुरू करें"
+  },
+  "community": {
+      "hero": {
+        "badge": "समुदाय हब",
+        "title": "स्टडी अब्रॉड समुदाय से जुड़े रहें",
+        "subtitle": "अंतरराष्ट्रीय छात्रों के लिए चुनी हुई खबरें, कहानियाँ और संसाधन",
+        "description": "सपोर्टर वीडियो, छात्र संघ, छात्रवृत्तियाँ और स्टडी इन कोरिया समुदाय से प्रेरित त्वरित लिंक देखें।"
+      },
+      "sections": {
+        "updates": "ताज़ा अपडेट",
+        "updatesDesc": "समाचार, सपोर्टर गतिविधियाँ, छात्रवृत्तियाँ और समुदाय FAQ पर नज़र रखें।",
+        "supporters": "सपोर्टर",
+        "supportersDesc": "विदेश में पढ़ाई और जीवन पर सीधे सपोर्टरों की बातें सुनें।",
+        "associations": "छात्र संघ",
+        "associationsDesc": "क्षेत्रीय छात्र संघों से जुड़ें और स्थानीय सहायता पाएं।",
+        "shorts": "संक्षिप्त कहानियाँ",
+        "shortsDesc": "विदेश में पढ़ाई के अनुभव दिखाने वाले छोटे वीडियो।",
+        "quick": "त्वरित लिंक"
+      },
+      "updates": {
+        "notice": { "title": "सूचनाएँ व समाचार", "desc": "छात्रों के लिए महत्वपूर्ण घोषणाएँ और अंतिम तिथियाँ।" },
+        "stories": { "title": "स्टडी स्टोरीज़", "desc": "विदेश में पढ़ रहे छात्रों के वास्तविक अनुभव।" },
+        "supporters": { "title": "सपोर्टर गतिविधियाँ", "desc": "सपोर्टरों के नवीनतम कार्यक्रम और सामग्री फॉलो करें।" },
+        "gks": { "title": "छात्रवृत्ति प्रमुख", "desc": "GKS जैसी छात्रवृत्तियाँ और वित्तीय सहायता अपडेट देखें।" },
+        "associations": { "title": "छात्र संघ", "desc": "शामिल होने के लिए क्षेत्रीय छात्र संघ खोजें।" },
+        "faq": { "title": "प्रश्न व FAQ", "desc": "विदेश में पढ़ाई से जुड़े सामान्य प्रश्नों के उत्तर।" },
+        "resources": { "title": "उपयोगी संसाधन", "desc": "यात्रा की योजना के लिए गाइड, चेकलिस्ट और टूल्स।" }
+      },
+      "supporters": {
+        "items": {
+          "1": { "title": "नॉर्थईस्टर्न यूनिवर्सिटी सपोर्टर (न्यूयॉर्क स्टेट मॉल कैपस्टोन)", "author": "Study in Korea द्वारा अपलोड", "meta": "वीडियो इंटरव्यू, छात्र जीवन" },
+          "2": { "title": "यूनिवर्सिटी ऑफ यूटा एशिया कैंपस सपोर्टर", "author": "Study in Korea द्वारा अपलोड", "meta": "कैंपस टूर, कार्यक्रम" },
+          "3": { "title": "डुकसंग विमेंस यूनिवर्सिटी में जीवन (Mink in Korea)", "author": "Mink in Korea द्वारा अपलोड", "meta": "व्लॉग, कैंपस जीवन" }
+        }
+      },
+      "associations": {
+        "items": {
+          "1": { "title": "DECOK (कांगो लोकतांत्रिक गणराज्य छात्र संघ)", "country": "डीआर कांगो", "meta": "नेटवर्किंग, मेंटरिंग, साथियों का समर्थन" },
+          "2": { "title": "FPVSAK (कोरिया में पेरू पूर्व छात्र संघ)", "country": "पेरू", "meta": "समुदाय कार्यक्रम और सांस्कृतिक आदान-प्रदान" },
+          "3": { "title": "KSAK (कोरिया में कज़ाख छात्र संघ)", "country": "कज़ाखस्तान", "meta": "स्थानीय मार्गदर्शन और नए छात्रों का समर्थन" }
+        }
+      },
+      "shorts": {
+        "items": {
+          "1": { "title": "अंतरराष्ट्रीय छात्र जॉब फेयर की झलक" },
+          "2": { "title": "करियर मेंटरिंग कहानियाँ" },
+          "3": { "title": "ग्लोबल टैलेंट फेयर रिकैप" }
+        }
+      },
+      "quick": {
+        "findSupporters": "Go Almond सपोर्टर खोजें",
+        "findSchool": "स्कूल और मेजर खोजें",
+        "scholarships": "छात्रवृत्तियाँ देखें",
+        "onlineApplication": "ऑनलाइन आवेदन",
+        "guidebook": "स्टडी गाइडबुक डाउनलोड करें"
+      },
+      "cta": { "viewAll": "सभी देखें" }
   },
   "search": {
     "title": "क्या आप अमेरिका में पढ़ाई में रुचि रखते हैं?",
@@ -112,10 +167,6 @@
     "visaInfo": "वीज़ा जानकारी",
     "studyFair": "अमेरिका में पढ़ाई मेला",
     "studentAssoc": "अंतर्राष्ट्रीय छात्र संघ"
-  },
-  "community": {
-    "title": "अंतर्राष्ट्रीय छात्र समुदाय",
-    "subtitle": "देश के अनुसार छात्र संघ"
   },
   "footer": {
     "about": "हमारे बारे में",
