--- a/src/i18n/locales/mn.json
+++ b/src/i18n/locales/mn.json
@@ -44,6 +44,63 @@
       "courses": "Хөтөлбөрүүд",
       "scholarships": "Тэтгэлэгүүд"
     },
+    "community": {
+      "hero": {
+        "badge": "Нийгмийн төв",
+        "title": "Гадаадад суралцах нийгэмлэгтэй холбогдсоор бай",
+        "subtitle": "Олон улсын оюутнуудад зориулсан мэдээ, түүх, нөөцийн эмхэтгэл",
+        "description": "Дэмжигчдийн видео, оюутны холбоо, тэтгэлэг, мөн Солонгост суралцах нийгэмлэгээс сэдэвлэсэн шууд холбоосуудыг үзээрэй."
+      },
+      "sections": {
+        "updates": "Шинэ мэдээлэл",
+        "updatesDesc": "Мэдээ, дэмжигчдийн үйл ажиллагаа, тэтгэлэг, Нийтийн FAQ-г түрүүлж аваарай.",
+        "supporters": "Дэмжигчид",
+        "supportersDesc": "Гадаадад сурах, амьдрах тухай дэмжигчдийн шууд яриаг сонсоорой.",
+        "associations": "Оюутны холбоод",
+        "associationsDesc": "Бүс нутгийн оюутны холбоодтой холбогдож, орон нутгийн дэмжлэг аваарай.",
+        "shorts": "Богино түүхүүд",
+        "shortsDesc": "Гадаадад суралцах туршлагыг онцлох богино видео.",
+        "quick": "Шуурхай холбоос"
+      },
+      "updates": {
+        "notice": { "title": "Мэдэгдэл ба мэдээ", "desc": "Оюутнуудад зориулсан чухал зар, хугацаа." },
+        "stories": { "title": "Суралцах түүхүүд", "desc": "Гадаадад суралцаж буй оюутнуудын бодит туршлага." },
+        "supporters": { "title": "Дэмжигчдийн үйл ажиллагаа", "desc": "Дэмжигчдийн сүүлийн үеийн арга хэмжээ, контентыг дагаарай." },
+        "gks": { "title": "Тэтгэлгийн онцлох", "desc": "GKS маягийн тэтгэлэг, санхүүжилтийн шинэчлэлийг шалгаарай." },
+        "associations": { "title": "Оюутны холбоод", "desc": "Нэгдэх боломжтой бүс нутгийн холбоодыг ол." },
+        "faq": { "title": "Лавлагаа ба FAQ", "desc": "Гадаадад суралцах түгээмэл асуултын хариулт." },
+        "resources": { "title": "Хэрэгтэй нөөц", "desc": "Аяллаа төлөвлөхөд зориулсан гарын авлага, жагсаалт, хэрэгслүүд." }
+      },
+      "supporters": {
+        "items": {
+          "1": { "title": "Нортистерн их сургуулийн дэмжигчид (Нью-Йорк мужийн Молл Капстоун)", "author": "Study in Korea байршуулсан", "meta": "Видео ярилцлага, оюутны амьдрал" },
+          "2": { "title": "Ютагийн их сургуулийн Ази кампусын дэмжигчид", "author": "Study in Korea байршуулсан", "meta": "Кампус аялал, хөтөлбөрүүд" },
+          "3": { "title": "Дүгсун эмэгтэйчүүдийн их сургууль дахь амьдрал (Mink in Korea)", "author": "Mink in Korea байршуулсан", "meta": "Влог, кампусын амьдрал" }
+        }
+      },
+      "associations": {
+        "items": {
+          "1": { "title": "DECOK (Бүгд Найрамдах Конго Улсын Оюутны Холбоо)", "country": "БН Конго", "meta": "Сүлжээ, менторшип, харилцан дэмжлэг" },
+          "2": { "title": "FPVSAK (Солонгост сурч төгсөгч Перу холбоо)", "country": "Перу", "meta": "Нийтийн арга хэмжээ, соёлын солилцоо" },
+          "3": { "title": "KSAK (Солонгост сурч буй Казахстан оюутны холбоо)", "country": "Казахстан", "meta": "Орон нутгийн зөвлөгөө, шинэ оюутанд дэмжлэг" }
+        }
+      },
+      "shorts": {
+        "items": {
+          "1": { "title": "Олон улсын оюутны ажил олголтын яармаг — Онцлох мөчүүд" },
+          "2": { "title": "Карьерын менторшип түүхүүд" },
+          "3": { "title": "Дэлхийн авьяастны наадмын тойм" }
+        }
+      },
+      "quick": {
+        "findSupporters": "Go Almond дэмжигчдийг хайх",
+        "findSchool": "Сургууль, мэргэжил хайх",
+        "scholarships": "Тэтгэлэг судлах",
+        "onlineApplication": "Онлайн өргөдөл",
+        "guidebook": "Суралцах гарын авлага татах"
+      },
+      "cta": { "viewAll": "Бүгдийг үзэх" }
+    },
     "login": "Нэвтрэх",
     "signup": "Бүртгүүлэх"
   },
@@ -121,11 +178,6 @@
       { "title": "Визийн мэдээлэл", "description": "F-1 виз болон цагаачлалын шаардлагын талаар суралцах" },
       { "title": "Амьжиргааны зардал", "description": "АНУ-ын өөр өөр хотуудын амьжиргааны зардлыг судлах" }
     ]
-  },
-  "community": {
-    "title": "Олон улсын оюутны нийгэмлэг",
-    "subtitle": "АНУ дахь улс орон бүрийн оюутны холбоод",
-    "countries": ["Хятад", "Энэтхэг", "Өмнөд Солонгос", "Вьетнам", "Тайвань", "Япон", "Саудын Араб", "Канад", "Мексик", "Бразил"]
   },
   "footer": {
     "logo": "АНУ-д суралц",
