--- a/src/i18n/locales/ru.json
+++ b/src/i18n/locales/ru.json
@@ -42,10 +42,66 @@
   },
   "hero": {
     "title": "Учёба в США",
-    "subtitle": "Начните своё путешествие к глобальному образованию",
-    "description": "Вы заинтересованы в обучении в США? Узнайте всё, что нужно знать об учёбе в Америке.",
-    "cta": "Узнать Сейчас"
+    "subtitle": "Начните своё путешествие к глобальному образованию"
   },
+  "community": {
+      "hero": {
+        "badge": "Сообщество",
+        "title": "Оставайтесь на связи с сообществом обучения за рубежом",
+        "subtitle": "Новости, истории и ресурсы для иностранных студентов",
+        "description": "Смотрите ролики от наставников, студенческие объединения, стипендии и быстрые ссылки, вдохновлённые сообществом Study in Korea."
+      },
+      "sections": {
+        "updates": "Последние обновления",
+        "updatesDesc": "Будьте в курсе новостей, активностей наставников, стипендий и FAQ сообщества.",
+        "supporters": "Наставники",
+        "supportersDesc": "Слушайте непосредственные истории о учёбе и жизни за рубежом.",
+        "associations": "Студенческие ассоциации",
+        "associationsDesc": "Свяжитесь с региональными ассоциациями и получите местную поддержку.",
+        "shorts": "Короткие истории",
+        "shortsDesc": "Короткие видео о том, каково учиться за границей.",
+        "quick": "Быстрые ссылки"
+      },
+      "updates": {
+        "notice": { "title": "Объявления и новости", "desc": "Важные сообщения и дедлайны для студентов." },
+        "stories": { "title": "Истории учёбы", "desc": "Реальный опыт студентов, обучающихся за границей." },
+        "supporters": { "title": "Активности наставников", "desc": "Следите за новыми событиями и контентом наших наставников." },
+        "gks": { "title": "Стипендии: главное", "desc": "Проверьте стипендии в стиле GKS и обновления по финансовой помощи." },
+        "associations": { "title": "Студенческие ассоциации", "desc": "Найдите региональные ассоциации, к которым можно присоединиться." },
+        "faq": { "title": "Вопросы и FAQ", "desc": "Ответы на частые вопросы об учёбе за рубежом." },
+        "resources": { "title": "Полезные ресурсы", "desc": "Гиды, чек-листы и инструменты для планирования." }
+      },
+      "supporters": {
+        "items": {
+          "1": { "title": "Наставники Университета Нортиситерн (Capstone в New York State Mall)", "author": "Загружено Study in Korea", "meta": "Видеоинтервью, студенческая жизнь" },
+          "2": { "title": "Наставники Asia Campus Университета Юты", "author": "Загружено Study in Korea", "meta": "Тур по кампусу, программы" },
+          "3": { "title": "Жизнь в женском университете Дуксун (Mink in Korea)", "author": "Загружено Mink in Korea", "meta": "Влог, жизнь в кампусе" }
+        }
+      },
+      "associations": {
+        "items": {
+          "1": { "title": "DECOK (Ассоциация студентов ДР Конго)", "country": "ДР Конго", "meta": "Нетворкинг, наставничество и поддержка сверстников" },
+          "2": { "title": "FPVSAK (Федерация выпускников Перу в Корее)", "country": "Перу", "meta": "Мероприятия сообщества и культурный обмен" },
+          "3": { "title": "KSAK (Ассоциация студентов Казахстана в Корее)", "country": "Казахстан", "meta": "Локальные советы и поддержка новичков" }
+        }
+      },
+      "shorts": {
+        "items": {
+          "1": { "title": "Главные моменты ярмарки вакансий для иностранных студентов" },
+          "2": { "title": "Истории карьерного наставничества" },
+          "3": { "title": "Обзор Global Talent Fair" }
+        }
+      },
+      "quick": {
+        "findSupporters": "Найти наставников Go Almond",
+        "findSchool": "Искать школы и специальности",
+        "scholarships": "Изучить стипендии",
+        "onlineApplication": "Онлайн-заявка",
+        "guidebook": "Скачать гайд по обучению"
+      },
+      "cta": { "viewAll": "Смотреть всё" }
+    },
+  "cta": "Узнать Сейчас",
   "search": {
     "title": "Вы заинтересованы в обучении в США?",
     "subtitle": "Найдите идеальные университеты, программы и стипендии для вас",
@@ -112,10 +168,6 @@
     "visaInfo": "Информация о визе",
     "studyFair": "Выставка Учёба в США",
     "studentAssoc": "Ассоциация иностранных студентов"
-  },
-  "community": {
-    "title": "Сообщество иностранных студентов",
-    "subtitle": "Ассоциации студентов по странам"
   },
   "footer": {
     "about": "О нас",
