--- a/src/i18n/locales/th.json
+++ b/src/i18n/locales/th.json
@@ -42,9 +42,64 @@
   },
   "hero": {
     "title": "เรียนในสหรัฐอเมริกา",
-    "subtitle": "เริ่มต้นการเดินทางสู่การศึกษาระดับโลก",
-    "description": "คุณสนใจเรียนในสหรัฐอเมริกาหรือไม่? ค้นพบทุกสิ่งที่คุณต้องรู้เกี่ยวกับการศึกษาในอเมริกา",
-    "cta": "สำรวจตอนนี้"
+    "subtitle": "เริ่มต้นการเดินทางสู่การศึกษาระดับโลก"
+  },
+  "community": {
+      "hero": {
+        "badge": "ศูนย์ชุมชน",
+        "title": "เชื่อมต่อกับชุมชนเรียนต่อต่างประเทศ",
+        "subtitle": "ข่าว เรื่องราว และแหล่งข้อมูลคัดสรรสำหรับนักศึกษาต่างชาติ",
+        "description": "สำรวจวิดีโอผู้สนับสนุน สมาคมนักศึกษา ทุนการศึกษา และลิงก์ด่วนที่ได้แรงบันดาลใจจากชุมชน Study in Korea."
+      },
+      "sections": {
+        "updates": "อัปเดตล่าสุด",
+        "updatesDesc": "ติดตามข่าว กิจกรรมผู้สนับสนุน ทุนการศึกษา และคำถามพบบ่อยของชุมชน",
+        "supporters": "ผู้สนับสนุน",
+        "supportersDesc": "ฟังประสบการณ์ตรงเรื่องการเรียนและใช้ชีวิตต่างแดนจากผู้สนับสนุน",
+        "associations": "สมาคมนักศึกษา",
+        "associationsDesc": "เชื่อมต่อสมาคมนักศึกษาในภูมิภาคและรับการช่วยเหลือใกล้ตัว",
+        "shorts": "เรื่องสั้น",
+        "shortsDesc": "วิดีโอสั้นถ่ายทอดประสบการณ์เรียนต่อต่างประเทศ",
+        "quick": "ลิงก์ด่วน"
+      },
+      "updates": {
+        "notice": { "title": "ประกาศและข่าว", "desc": "ประกาศสำคัญและกำหนดเวลาสำหรับนักศึกษา" },
+        "stories": { "title": "เรื่องราวการเรียน", "desc": "ประสบการณ์จริงจากนักศึกษาที่เรียนอยู่ต่างประเทศ" },
+        "supporters": { "title": "กิจกรรมผู้สนับสนุน", "desc": "ติดตามอีเวนต์และคอนเทนต์ล่าสุดจากผู้สนับสนุน" },
+        "gks": { "title": "ไฮไลท์ทุน", "desc": "ดูทุนแบบ GKS และอัปเดตเงินช่วยเหลือ" },
+        "associations": { "title": "สมาคมนักศึกษา", "desc": "ค้นหาสมาคมนักศึกษาในพื้นที่ที่เข้าร่วมได้" },
+        "faq": { "title": "คำถามและ FAQ", "desc": "คำตอบสำหรับคำถามที่พบบ่อยเกี่ยวกับการเรียนต่างประเทศ" },
+        "resources": { "title": "ทรัพยากรที่มีประโยชน์", "desc": "คู่มือ เช็กลิสต์ และเครื่องมือวางแผนการเดินทาง" }
+      },
+      "supporters": {
+        "items": {
+          "1": { "title": "ผู้สนับสนุน Northeastern University (Capstone ที่ New York State Mall)", "author": "อัปโหลดโดย Study in Korea", "meta": "สัมภาษณ์วิดีโอ ชีวิตนักศึกษา" },
+          "2": { "title": "ผู้สนับสนุน University of Utah Asia Campus", "author": "อัปโหลดโดย Study in Korea", "meta": "ทัวร์แคมปัส โปรแกรมการเรียน" },
+          "3": { "title": "ชีวิตที่มหาวิทยาลัยสตรี Duksung (Mink in Korea)", "author": "อัปโหลดโดย Mink in Korea", "meta": "วล็อก ชีวิตในแคมปัส" }
+        }
+      },
+      "associations": {
+        "items": {
+          "1": { "title": "DECOK (สมาคมนักศึกษาสาธารณรัฐประชาธิปไตยคองโก)", "country": "ดีอาร์คองโก", "meta": "สร้างเครือข่าย การให้คำปรึกษา และการช่วยเหลือเพื่อน" },
+          "2": { "title": "FPVSAK (สหพันธ์ศิษย์เก่าชาวเปรูในเกาหลี)", "country": "เปรู", "meta": "กิจกรรมชุมชนและแลกเปลี่ยนวัฒนธรรม" },
+          "3": { "title": "KSAK (สมาคมนักศึกษาคาซัคสถานในเกาหลี)", "country": "คาซัคสถาน", "meta": "คำแนะนำพื้นที่และการช่วยเหลือผู้มาใหม่" }
+        }
+      },
+      "shorts": {
+        "items": {
+          "1": { "title": "ไฮไลท์งานแฟร์งานสำหรับนักศึกษาต่างชาติ" },
+          "2": { "title": "เรื่องราวการให้คำปรึกษาอาชีพ" },
+          "3": { "title": "สรุปงาน Global Talent Fair" }
+        }
+      },
+      "quick": {
+        "findSupporters": "ค้นหาผู้สนับสนุน Go Almond",
+        "findSchool": "ค้นหาโรงเรียนและสาขา",
+        "scholarships": "ดูทุนการศึกษา",
+        "onlineApplication": "สมัครออนไลน์",
+        "guidebook": "ดาวน์โหลดคู่มือการเรียน"
+      },
+      "cta": { "viewAll": "ดูทั้งหมด" }
   },
   "search": {
     "title": "คุณสนใจเรียนในสหรัฐอเมริกาหรือไม่?",
@@ -112,10 +167,6 @@
     "visaInfo": "ข้อมูลวีซ่า",
     "studyFair": "งานเรียนในสหรัฐฯ",
     "studentAssoc": "สมาคมนักศึกษาต่างชาติ"
-  },
-  "community": {
-    "title": "ชุมชนนักศึกษาต่างชาติ",
-    "subtitle": "สมาคมนักศึกษาตามประเทศ"
   },
   "footer": {
     "about": "เกี่ยวกับเรา",
